# ydotool

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  STATEMENT.txt
Client/: tool_click.c  tool_key.c  tool_mousemove.c  tool_type.c  ydotool.c  ydotool.h
Daemon/: 70-ydotool.rules  CMakeLists.txt  ydotool.service.in  ydotoold.c
res/: hardknott_qt_builder.Dockerfile  kirkstone_qt_builder.Dockerfile  mickledore_qt_builder.Dockerfile  qcom_1.7_builder.Dockerfile  qcom_1.8_builder.Dockerfile  qt_hardknott.Dockerfile  scarthgap_qt_builder.Dockerfile
